@@ -150,7 +150,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1057 $"))
+    (let ((rev "$Revision: 1.1058 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1030))
 	   (concat "1.4.0" (if (>= rev 0) (format ".%d" (+ rev 50)) "")))))
@@ -3457,6 +3457,21 @@ In Transient Mark mode, deactivate the mark."
 	(w3m-deactivate-region))
     (w3m-url-at-point)))
 
+(defsubst w3m-canonicalize-url (url)
+  (when (stringp url)
+    ;; An URL must include a scheme part.
+    (unless (and (string-match w3m-url-components-regexp url)
+		 (match-beginning 1))
+      (setq url (concat (if (and (file-name-absolute-p url)
+				 (file-exists-p url))
+			    "file://"
+			  "http://")
+			url)))
+    ;; A server part must be ended with a slash.
+    (if (string-match "\\`\\(ht\\|f\\)tps?://[^/]+\\'" url)
+	(concat url "/")
+      url)))
+
 (defun w3m-input-url (&optional prompt initial default quick-start)
   "Read a url from the minibuffer, prompting with string PROMPT."
   (let (url)
@@ -3488,12 +3503,7 @@ In Transient Mark mode, deactivate the mark."
       (when (stringp url)
 	(setq w3m-input-url-history
 	      (cons url (delete url w3m-input-url-history))))
-      ;; The return value of this function must contain a scheme part.
-      (if (or (not (stringp url))
-	      (and (string-match w3m-url-components-regexp url)
-		   (match-beginning 1)))
-	  url
-	(concat "http://" url)))))
+      (w3m-canonicalize-url url))))
 
 
 ;;; Cache:
@@ -4030,11 +4040,6 @@ Return a list which includes:
       (when success
 	(buffer-string)))))
 
-(defsubst w3m-w3m-canonicalize-url (url)
-  (if (string-match "\\`\\(ht\\|f\\)tps?://[^/]+\\'" url)
-      (concat url "/")
-    url))
-
 (defun w3m-w3m-attributes (url no-cache handler)
   "Return a list of attributes corresponding to URL.
 Return nil if it failed in retrieving of the header.
@@ -4048,7 +4053,7 @@ Otherwise, return a list which includes the following elements:
  5. Real URL.
 
 If the optional argument NO-CACHE is non-nil, cache is not used."
-  (w3m-w3m-attributes-1 (w3m-w3m-canonicalize-url url)
+  (w3m-w3m-attributes-1 url
 			no-cache
 			(or w3m-follow-redirection 0)
 			handler))
@@ -4282,7 +4287,7 @@ Third optional CONTENT-TYPE is the Content-Type: field content."
   "Retrieve web contents pointed to by URL using the external w3m command.
 It will put the retrieved contents into the current buffer.  See
 `w3m-retrieve' for how does it work asynchronously with the arguments."
-  (lexical-let ((url (w3m-w3m-canonicalize-url url))
+  (lexical-let ((url url)
 		(no-decode no-decode)
 		(current-buffer (current-buffer)))
     (w3m-process-do-with-temp-buffer
@@ -5098,7 +5103,7 @@ COUNT is treated as 1 by default if it is omitted."
     (defalias 'w3m-expand-path-name 'expand-file-name)))
 
 (defconst w3m-url-hierarchical-schemes
-  '("http" "https" "ftp" "file")
+  '("http" "https" "ftp" "ftps" "file")
   "List of schemes which may have hierarchical parts.
 This list is refered to by `w3m-expand-url' to keep backward
 compatibility which is described in Section 5.2 of RFC 2396.")
@@ -7396,6 +7401,7 @@ Pop to a window or a frame up according to `w3m-pop-up-windows' and
 		 (require 'browse-url)
 		 (browse-url-interactive-arg "Emacs-w3m URL: ")))
   (when (stringp url)
+    (setq url (w3m-canonicalize-url url))
     (if new-session
 	(w3m-goto-url-new-session url)
       (w3m-goto-url url))))
